// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActiveDayTasks render should render two SelectGroups components with min props 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ActiveDayTasks
    disable={false}
    isHoliday={false}
    onActivitySelect={[MockFunction]}
    onPhaseSelect={[MockFunction]}
    projectPhasesQuery={
      Object {
        "error": false,
        "loading": true,
        "phases": Object {
          "default": 456,
          "options": Array [
            Object {
              "activities": Object {
                "default": 7,
                "options": Array [
                  Object {
                    "id": 6,
                    "name": "BugFix",
                  },
                  Object {
                    "id": 7,
                    "name": "Code/ Document Reviews",
                  },
                  Object {
                    "id": 9,
                    "name": "Coding",
                  },
                  Object {
                    "id": 65,
                    "name": "Absence / Compensation",
                  },
                ],
              },
              "id": 456,
              "name": "Project Phase Name",
            },
            Object {
              "activities": Object {
                "default": 6,
                "options": Array [
                  Object {
                    "id": 6,
                    "name": "BugFix",
                  },
                  Object {
                    "id": 10,
                    "name": "Test fix",
                  },
                ],
              },
              "id": 445,
              "name": "Super cool project that just has bugs!",
            },
          ],
        },
      }
    }
    selectedActivity={
      Object {
        "id": 9,
        "name": "Coding",
      }
    }
    selectedPhase={
      Object {
        "activities": Object {
          "default": 7,
          "options": Array [
            Object {
              "id": 6,
              "name": "BugFix",
            },
            Object {
              "id": 7,
              "name": "Code/ Document Reviews",
            },
            Object {
              "id": 9,
              "name": "Coding",
            },
            Object {
              "id": 65,
              "name": "Absence / Compensation",
            },
          ],
        },
        "id": 456,
        "name": "Project Phase Name",
      }
    }
    tabIndex={0}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <SelectGroup
          disabled={false}
          label="Projeto/fase"
          name="projectPhase"
          onChange={[MockFunction]}
          options={
            Array [
              Object {
                "activities": Object {
                  "default": 7,
                  "options": Array [
                    Object {
                      "id": 6,
                      "name": "BugFix",
                    },
                    Object {
                      "id": 7,
                      "name": "Code/ Document Reviews",
                    },
                    Object {
                      "id": 9,
                      "name": "Coding",
                    },
                    Object {
                      "id": 65,
                      "name": "Absence / Compensation",
                    },
                  ],
                },
                "id": 456,
                "name": "Project Phase Name",
              },
              Object {
                "activities": Object {
                  "default": 6,
                  "options": Array [
                    Object {
                      "id": 6,
                      "name": "BugFix",
                    },
                    Object {
                      "id": 10,
                      "name": "Test fix",
                    },
                  ],
                },
                "id": 445,
                "name": "Super cool project that just has bugs!",
              },
            ]
          }
          selected={456}
          showTextInstead={null}
          tabIndex={0}
        />,
        <SelectGroup
          disabled={false}
          label="Atividade"
          name="activity"
          onChange={[MockFunction]}
          options={
            Array [
              Object {
                "id": 6,
                "name": "BugFix",
              },
              Object {
                "id": 7,
                "name": "Code/ Document Reviews",
              },
              Object {
                "id": 9,
                "name": "Coding",
              },
              Object {
                "id": 65,
                "name": "Absence / Compensation",
              },
            ]
          }
          selected={9}
          showTextInstead={null}
          tabIndex={1}
        />,
      ],
      "className": "active-day-tasks",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "disabled": false,
          "label": "Projeto/fase",
          "name": "projectPhase",
          "onChange": [MockFunction],
          "options": Array [
            Object {
              "activities": Object {
                "default": 7,
                "options": Array [
                  Object {
                    "id": 6,
                    "name": "BugFix",
                  },
                  Object {
                    "id": 7,
                    "name": "Code/ Document Reviews",
                  },
                  Object {
                    "id": 9,
                    "name": "Coding",
                  },
                  Object {
                    "id": 65,
                    "name": "Absence / Compensation",
                  },
                ],
              },
              "id": 456,
              "name": "Project Phase Name",
            },
            Object {
              "activities": Object {
                "default": 6,
                "options": Array [
                  Object {
                    "id": 6,
                    "name": "BugFix",
                  },
                  Object {
                    "id": 10,
                    "name": "Test fix",
                  },
                ],
              },
              "id": 445,
              "name": "Super cool project that just has bugs!",
            },
          ],
          "selected": 456,
          "showTextInstead": null,
          "tabIndex": 0,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "disabled": false,
          "label": "Atividade",
          "name": "activity",
          "onChange": [MockFunction],
          "options": Array [
            Object {
              "id": 6,
              "name": "BugFix",
            },
            Object {
              "id": 7,
              "name": "Code/ Document Reviews",
            },
            Object {
              "id": 9,
              "name": "Coding",
            },
            Object {
              "id": 65,
              "name": "Absence / Compensation",
            },
          ],
          "selected": 9,
          "showTextInstead": null,
          "tabIndex": 1,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <SelectGroup
            disabled={false}
            label="Projeto/fase"
            name="projectPhase"
            onChange={[MockFunction]}
            options={
              Array [
                Object {
                  "activities": Object {
                    "default": 7,
                    "options": Array [
                      Object {
                        "id": 6,
                        "name": "BugFix",
                      },
                      Object {
                        "id": 7,
                        "name": "Code/ Document Reviews",
                      },
                      Object {
                        "id": 9,
                        "name": "Coding",
                      },
                      Object {
                        "id": 65,
                        "name": "Absence / Compensation",
                      },
                    ],
                  },
                  "id": 456,
                  "name": "Project Phase Name",
                },
                Object {
                  "activities": Object {
                    "default": 6,
                    "options": Array [
                      Object {
                        "id": 6,
                        "name": "BugFix",
                      },
                      Object {
                        "id": 10,
                        "name": "Test fix",
                      },
                    ],
                  },
                  "id": 445,
                  "name": "Super cool project that just has bugs!",
                },
              ]
            }
            selected={456}
            showTextInstead={null}
            tabIndex={0}
          />,
          <SelectGroup
            disabled={false}
            label="Atividade"
            name="activity"
            onChange={[MockFunction]}
            options={
              Array [
                Object {
                  "id": 6,
                  "name": "BugFix",
                },
                Object {
                  "id": 7,
                  "name": "Code/ Document Reviews",
                },
                Object {
                  "id": 9,
                  "name": "Coding",
                },
                Object {
                  "id": 65,
                  "name": "Absence / Compensation",
                },
              ]
            }
            selected={9}
            showTextInstead={null}
            tabIndex={1}
          />,
        ],
        "className": "active-day-tasks",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "disabled": false,
            "label": "Projeto/fase",
            "name": "projectPhase",
            "onChange": [MockFunction],
            "options": Array [
              Object {
                "activities": Object {
                  "default": 7,
                  "options": Array [
                    Object {
                      "id": 6,
                      "name": "BugFix",
                    },
                    Object {
                      "id": 7,
                      "name": "Code/ Document Reviews",
                    },
                    Object {
                      "id": 9,
                      "name": "Coding",
                    },
                    Object {
                      "id": 65,
                      "name": "Absence / Compensation",
                    },
                  ],
                },
                "id": 456,
                "name": "Project Phase Name",
              },
              Object {
                "activities": Object {
                  "default": 6,
                  "options": Array [
                    Object {
                      "id": 6,
                      "name": "BugFix",
                    },
                    Object {
                      "id": 10,
                      "name": "Test fix",
                    },
                  ],
                },
                "id": 445,
                "name": "Super cool project that just has bugs!",
              },
            ],
            "selected": 456,
            "showTextInstead": null,
            "tabIndex": 0,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "disabled": false,
            "label": "Atividade",
            "name": "activity",
            "onChange": [MockFunction],
            "options": Array [
              Object {
                "id": 6,
                "name": "BugFix",
              },
              Object {
                "id": 7,
                "name": "Code/ Document Reviews",
              },
              Object {
                "id": 9,
                "name": "Coding",
              },
              Object {
                "id": 65,
                "name": "Absence / Compensation",
              },
            ],
            "selected": 9,
            "showTextInstead": null,
            "tabIndex": 1,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ActiveDayTasks render should render two SelectGroups components with min props 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ActiveDayTasks
    disable={false}
    isHoliday={true}
    onActivitySelect={[MockFunction]}
    onPhaseSelect={[MockFunction]}
    projectPhasesQuery={
      Object {
        "error": false,
        "loading": true,
        "phases": Object {
          "default": 456,
          "options": Array [
            Object {
              "activities": Object {
                "default": 7,
                "options": Array [
                  Object {
                    "id": 6,
                    "name": "BugFix",
                  },
                  Object {
                    "id": 7,
                    "name": "Code/ Document Reviews",
                  },
                  Object {
                    "id": 9,
                    "name": "Coding",
                  },
                  Object {
                    "id": 65,
                    "name": "Absence / Compensation",
                  },
                ],
              },
              "id": 456,
              "name": "Project Phase Name",
            },
            Object {
              "activities": Object {
                "default": 6,
                "options": Array [
                  Object {
                    "id": 6,
                    "name": "BugFix",
                  },
                  Object {
                    "id": 10,
                    "name": "Test fix",
                  },
                ],
              },
              "id": 445,
              "name": "Super cool project that just has bugs!",
            },
          ],
        },
      }
    }
    selectedActivity={
      Object {
        "id": 9,
        "name": "Coding",
      }
    }
    selectedPhase={
      Object {
        "activities": Object {
          "default": 7,
          "options": Array [
            Object {
              "id": 6,
              "name": "BugFix",
            },
            Object {
              "id": 7,
              "name": "Code/ Document Reviews",
            },
            Object {
              "id": 9,
              "name": "Coding",
            },
            Object {
              "id": 65,
              "name": "Absence / Compensation",
            },
          ],
        },
        "id": 456,
        "name": "Project Phase Name",
      }
    }
    tabIndex={0}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <SelectGroup
          disabled={false}
          label="Projeto/fase"
          name="projectPhase"
          onChange={[MockFunction]}
          options={
            Array [
              Object {
                "activities": Object {
                  "default": 7,
                  "options": Array [
                    Object {
                      "id": 6,
                      "name": "BugFix",
                    },
                    Object {
                      "id": 7,
                      "name": "Code/ Document Reviews",
                    },
                    Object {
                      "id": 9,
                      "name": "Coding",
                    },
                    Object {
                      "id": 65,
                      "name": "Absence / Compensation",
                    },
                  ],
                },
                "id": 456,
                "name": "Project Phase Name",
              },
              Object {
                "activities": Object {
                  "default": 6,
                  "options": Array [
                    Object {
                      "id": 6,
                      "name": "BugFix",
                    },
                    Object {
                      "id": 10,
                      "name": "Test fix",
                    },
                  ],
                },
                "id": 445,
                "name": "Super cool project that just has bugs!",
              },
            ]
          }
          selected={456}
          showTextInstead={null}
          tabIndex={0}
        />,
        <SelectGroup
          disabled={false}
          label="Atividade"
          name="activity"
          onChange={[MockFunction]}
          options={
            Array [
              Object {
                "id": 6,
                "name": "BugFix",
              },
              Object {
                "id": 7,
                "name": "Code/ Document Reviews",
              },
              Object {
                "id": 9,
                "name": "Coding",
              },
              Object {
                "id": 65,
                "name": "Absence / Compensation",
              },
            ]
          }
          selected={9}
          showTextInstead="Holiday"
          tabIndex={1}
        />,
      ],
      "className": "active-day-tasks",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "disabled": false,
          "label": "Projeto/fase",
          "name": "projectPhase",
          "onChange": [MockFunction],
          "options": Array [
            Object {
              "activities": Object {
                "default": 7,
                "options": Array [
                  Object {
                    "id": 6,
                    "name": "BugFix",
                  },
                  Object {
                    "id": 7,
                    "name": "Code/ Document Reviews",
                  },
                  Object {
                    "id": 9,
                    "name": "Coding",
                  },
                  Object {
                    "id": 65,
                    "name": "Absence / Compensation",
                  },
                ],
              },
              "id": 456,
              "name": "Project Phase Name",
            },
            Object {
              "activities": Object {
                "default": 6,
                "options": Array [
                  Object {
                    "id": 6,
                    "name": "BugFix",
                  },
                  Object {
                    "id": 10,
                    "name": "Test fix",
                  },
                ],
              },
              "id": 445,
              "name": "Super cool project that just has bugs!",
            },
          ],
          "selected": 456,
          "showTextInstead": null,
          "tabIndex": 0,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "disabled": false,
          "label": "Atividade",
          "name": "activity",
          "onChange": [MockFunction],
          "options": Array [
            Object {
              "id": 6,
              "name": "BugFix",
            },
            Object {
              "id": 7,
              "name": "Code/ Document Reviews",
            },
            Object {
              "id": 9,
              "name": "Coding",
            },
            Object {
              "id": 65,
              "name": "Absence / Compensation",
            },
          ],
          "selected": 9,
          "showTextInstead": "Holiday",
          "tabIndex": 1,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <SelectGroup
            disabled={false}
            label="Projeto/fase"
            name="projectPhase"
            onChange={[MockFunction]}
            options={
              Array [
                Object {
                  "activities": Object {
                    "default": 7,
                    "options": Array [
                      Object {
                        "id": 6,
                        "name": "BugFix",
                      },
                      Object {
                        "id": 7,
                        "name": "Code/ Document Reviews",
                      },
                      Object {
                        "id": 9,
                        "name": "Coding",
                      },
                      Object {
                        "id": 65,
                        "name": "Absence / Compensation",
                      },
                    ],
                  },
                  "id": 456,
                  "name": "Project Phase Name",
                },
                Object {
                  "activities": Object {
                    "default": 6,
                    "options": Array [
                      Object {
                        "id": 6,
                        "name": "BugFix",
                      },
                      Object {
                        "id": 10,
                        "name": "Test fix",
                      },
                    ],
                  },
                  "id": 445,
                  "name": "Super cool project that just has bugs!",
                },
              ]
            }
            selected={456}
            showTextInstead={null}
            tabIndex={0}
          />,
          <SelectGroup
            disabled={false}
            label="Atividade"
            name="activity"
            onChange={[MockFunction]}
            options={
              Array [
                Object {
                  "id": 6,
                  "name": "BugFix",
                },
                Object {
                  "id": 7,
                  "name": "Code/ Document Reviews",
                },
                Object {
                  "id": 9,
                  "name": "Coding",
                },
                Object {
                  "id": 65,
                  "name": "Absence / Compensation",
                },
              ]
            }
            selected={9}
            showTextInstead="Holiday"
            tabIndex={1}
          />,
        ],
        "className": "active-day-tasks",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "disabled": false,
            "label": "Projeto/fase",
            "name": "projectPhase",
            "onChange": [MockFunction],
            "options": Array [
              Object {
                "activities": Object {
                  "default": 7,
                  "options": Array [
                    Object {
                      "id": 6,
                      "name": "BugFix",
                    },
                    Object {
                      "id": 7,
                      "name": "Code/ Document Reviews",
                    },
                    Object {
                      "id": 9,
                      "name": "Coding",
                    },
                    Object {
                      "id": 65,
                      "name": "Absence / Compensation",
                    },
                  ],
                },
                "id": 456,
                "name": "Project Phase Name",
              },
              Object {
                "activities": Object {
                  "default": 6,
                  "options": Array [
                    Object {
                      "id": 6,
                      "name": "BugFix",
                    },
                    Object {
                      "id": 10,
                      "name": "Test fix",
                    },
                  ],
                },
                "id": 445,
                "name": "Super cool project that just has bugs!",
              },
            ],
            "selected": 456,
            "showTextInstead": null,
            "tabIndex": 0,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "disabled": false,
            "label": "Atividade",
            "name": "activity",
            "onChange": [MockFunction],
            "options": Array [
              Object {
                "id": 6,
                "name": "BugFix",
              },
              Object {
                "id": 7,
                "name": "Code/ Document Reviews",
              },
              Object {
                "id": 9,
                "name": "Coding",
              },
              Object {
                "id": 65,
                "name": "Absence / Compensation",
              },
            ],
            "selected": 9,
            "showTextInstead": "Holiday",
            "tabIndex": 1,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
